# EXR_checker

./: AGENTS.md  CODEX.md  DECISIONS.md  README.md  TASKS.md  pyproject.toml
.codex/: session.md
src/exr_checker/: __init__.py  cli.py
